--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -168,8 +168,7 @@ input[type="search"] {
  -webkit-box-sizing:content-box;
  box-sizing:content-box
 }
-input[type="search"]::-webkit-search-decoration,input[type="search"]::-webkit-search-cancel-button 
-{
+input[type="search"]::-webkit-search-decoration,input[type="search"]::-webkit-search-cancel-button {
  -webkit-appearance:none
 }
 button::-moz-focus-inner,input::-moz-focus-inner {
@@ -187,54 +186,35 @@ table {
 @font-face {
  font-family:'Quattrocento Sans';
  src:url("../fonts/quattrocentosans-bold-webfont.eot");
- src:url("../fonts/quattrocentosans-bold-webfont.eot?#iefix") 
-format("embedded-opentype"),url("../fonts/quattrocentosans-bold-webfont.woff") 
-format("woff"),url("../fonts/quattrocentosans-bold-webfont.ttf") 
-format("truetype"),url("../fonts/quattrocentosans-bold-webfont.svg#QuattrocentoSansBold") 
-format("svg");
+ src:url("../fonts/quattrocentosans-bold-webfont.eot?#iefix") format("embedded-opentype"),url("../fonts/quattrocentosans-bold-webfont.woff") format("woff"),url("../fonts/quattrocentosans-bold-webfont.ttf") format("truetype"),url("../fonts/quattrocentosans-bold-webfont.svg#QuattrocentoSansBold") format("svg");
  font-weight:bold;
  font-style:normal
 }
 @font-face {
  font-family:'Quattrocento Sans';
  src:url("../fonts/quattrocentosans-bolditalic-webfont.eot");
- src:url("../fonts/quattrocentosans-bolditalic-webfont.eot?#iefix") 
-format("embedded-opentype"),url("../fonts/quattrocentosans-bolditalic-webfont.woff") 
-format("woff"),url("../fonts/quattrocentosans-bolditalic-webfont.ttf") 
-format("truetype"),url("../fonts/quattrocentosans-bolditalic-webfont.svg#QuattrocentoSansBoldItalic") 
-format("svg");
+ src:url("../fonts/quattrocentosans-bolditalic-webfont.eot?#iefix") format("embedded-opentype"),url("../fonts/quattrocentosans-bolditalic-webfont.woff") format("woff"),url("../fonts/quattrocentosans-bolditalic-webfont.ttf") format("truetype"),url("../fonts/quattrocentosans-bolditalic-webfont.svg#QuattrocentoSansBoldItalic") format("svg");
  font-weight:bold;
  font-style:italic
 }
 @font-face {
  font-family:'Quattrocento Sans';
  src:url("../fonts/quattrocentosans-italic-webfont.eot");
- src:url("../fonts/quattrocentosans-italic-webfont.eot?#iefix") 
-format("embedded-opentype"),url("../fonts/quattrocentosans-italic-webfont.woff") 
-format("woff"),url("../fonts/quattrocentosans-italic-webfont.ttf") 
-format("truetype"),url("../fonts/quattrocentosans-italic-webfont.svg#QuattrocentoSansItalic") 
-format("svg");
+ src:url("../fonts/quattrocentosans-italic-webfont.eot?#iefix") format("embedded-opentype"),url("../fonts/quattrocentosans-italic-webfont.woff") format("woff"),url("../fonts/quattrocentosans-italic-webfont.ttf") format("truetype"),url("../fonts/quattrocentosans-italic-webfont.svg#QuattrocentoSansItalic") format("svg");
  font-weight:normal;
  font-style:italic
 }
 @font-face {
  font-family:'Quattrocento Sans';
  src:url("../fonts/quattrocentosans-regular-webfont.eot");
- src:url("../fonts/quattrocentosans-regular-webfont.eot?#iefix") 
-format("embedded-opentype"),url("../fonts/quattrocentosans-regular-webfont.woff") 
-format("woff"),url("../fonts/quattrocentosans-regular-webfont.ttf") 
-format("truetype"),url("../fonts/quattrocentosans-regular-webfont.svg#QuattrocentoSansRegular") 
-format("svg");
+ src:url("../fonts/quattrocentosans-regular-webfont.eot?#iefix") format("embedded-opentype"),url("../fonts/quattrocentosans-regular-webfont.woff") format("woff"),url("../fonts/quattrocentosans-regular-webfont.ttf") format("truetype"),url("../fonts/quattrocentosans-regular-webfont.svg#QuattrocentoSansRegular") format("svg");
  font-weight:normal;
  font-style:normal
 }
 @font-face {
  font-family:'Copse';
  src:url("../fonts/copse-regular-webfont.eot");
- src:url("../fonts/copse-regular-webfont.eot?#iefix") 
-format("embedded-opentype"),url("../fonts/copse-regular-webfont.woff") 
-format("woff"),url("../fonts/copse-regular-webfont.ttf") 
-format("truetype"),url("../fonts/copse-regular-webfont.svg#CopseRegular") format("svg");
+ src:url("../fonts/copse-regular-webfont.eot?#iefix") format("embedded-opentype"),url("../fonts/copse-regular-webfont.woff") format("woff"),url("../fonts/copse-regular-webfont.ttf") format("truetype"),url("../fonts/copse-regular-webfont.svg#CopseRegular") format("svg");
  font-weight:normal;
  font-style:normal
 }
@@ -288,8 +268,7 @@ format("truetype"),url("../fonts/copse-regular-webfont.svg#CopseRegular") format
 .highlight .kd {
  color:#d28445
 }
-.highlight .s,.highlight .sb,.highlight .sc,.highlight .sd,.highlight .s2,.highlight 
-.sh,.highlight .sx,.highlight .s1 {
+.highlight .s,.highlight .sb,.highlight .sc,.highlight .sd,.highlight .s2,.highlight .sh,.highlight .sx,.highlight .s1 {
  color:#90a959
 }
 .highlight .sr {
@@ -313,15 +292,14 @@ format("truetype"),url("../fonts/copse-regular-webfont.svg#CopseRegular") format
 .highlight .na {
  color:#6a9fb5
 }
-.highlight .m,.highlight .mf,.highlight .mh,.highlight .mi,.highlight .il,.highlight 
-.mo,.highlight .mb,.highlight .mx {
+.highlight .m,.highlight .mf,.highlight .mh,.highlight .mi,.highlight .il,.highlight .mo,.highlight .mb,.highlight .mx {
  color:#90a959
 }
 .highlight .ss {
  color:#90a959
 }
 body {
- font:14px/22px 'Quattrocento Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
+ font:18px/24px 'Quattrocento Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
  color:#666;
  font-weight:300;
  margin:0px;
@@ -330,7 +308,7 @@ body {
 }
 h1,h2,h3,h4,h5,h6 {
  color:#333;
- margin:0 0 10px
+ margin:30px 0 0 °;
 }
 p,ul,ol,table,pre,dl {
  margin:0 0 20px
@@ -346,10 +324,10 @@ h2 {
  color:#393939
 }
 h3,h4,h5,h6 {
- color:#666666
+ color:#666
 }
 h3 {
- font-size:18px;
+ font-size:23px;
  line-height:24px
 }
 a {
@@ -372,10 +350,10 @@ strong {
 }
 .wrapper {
  position:relative;
- width: 95%;
- margin-left: 2.5%;
- margin-right: 2.5%;
- margin-top: 200px;
+ width:95%;
+ margin-left:2.5%;
+ margin-right:2.5%;
+ margin-top:200px
 }
 section img {
  max-width:100%
@@ -422,10 +400,10 @@ td {
  text-align:left;
  padding:5px 10px;
  border-bottom:1px solid #e5e5e5;
- border-right:1px solid #ffcc00
+ border-right:1px solid #fc0
 }
 td:first-child {
- border-left:1px solid #ffcc00
+ border-left:1px solid #fc0
 }
 hr {
  border:0;
@@ -482,7 +460,7 @@ header p {
  box-shadow:0px 1px 3px rgba(0,0,0,0.25);
  border-radius:0px 2px 2px 0px;
  padding-right:10px;
- width: 200px;
+ width:200px
 }
 #banner .button {
  border:1px solid #dba500;
@@ -544,7 +522,7 @@ header p {
  top:7px;
  display:block;
  background:url(../images/octocat-logo.svg);
- left: 150px;
+ left:150px
 }
 section {
  width:70%;
@@ -553,9 +531,8 @@ section {
  background:#fbfbfb;
  border-radius:3px;
  border:1px solid #cbcbcb;
- box-shadow:0px 1px 2px rgba(0,0,0,0.09),inset 0px 0px 2px 2px rgba(255,255,255,0.5),inset 0 0 
-5px 5px rgba(255,255,255,0.4);
- float: right;
+ box-shadow:0px 1px 2px rgba(0,0,0,0.09),inset 0px 0px 2px 2px rgba(255,255,255,0.5),inset 0 0 5px 5px rgba(255,255,255,0.4);
+ float:right
 }
 small {
  font-size:12px
@@ -563,7 +540,7 @@ small {
 nav {
  width:25%;
  text-align:left;
- float: left;
+ float:left
 }
 nav ul {
  list-style:none;
@@ -734,21 +711,37 @@ footer {
   width:auto
  }
 }
+.tag-h2 {
+ margin-left:10px
+}
+.tag-h3 {
+ margin-left:20px
+}
+.tag-h4 {
+ margin-left:30px
+}
+.tag-h5 {
+ margin-left:40px
+}
+.tag-h6 {
+ margin-left:50px
+}
+h1{
 
-.tag-h2{
-  margin-left:10px;
 }
-.tag-h3{
-  margin-left:20px;  
+h2, h2+p,ul {
+    margin-left:20px    !important;
 }
-.tag-h4{
-  margin-left:30px;  
+h3, h3+p, ul {
+    margin-left:40px    !important;
 }
-.tag-h5{
-  margin-left:40px;  
+h4, h4+p {
+    margin-left:60px    !important;
 }
-.tag-h6{
-  margin-left:50px;  
+h5, h5+p {
+    margin-left:80px    !important;
 }
-
+h6, h6+p {
+    margin-left:100px   !important;
+}
 
