--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -109,7 +109,7 @@ dd {
  margin:0 0 0 40px
 }
 menu,ol,ul {
- padding:0 0 0 40px
+ padding:0 5px 0 5px;
 }
 nav ul,nav ol {
  list-style:none;
@@ -308,7 +308,7 @@ body {
 }
 h1,h2,h3,h4,h5,h6 {
  color:#333;
- margin:30px 0 0 °;
+ margin:30px 0 0 °
 }
 p,ul,ol,table,pre,dl {
  margin:0 0 20px
@@ -525,8 +525,8 @@ header p {
  left:150px
 }
 section {
- width:70%;
- padding:30px 30px 50px 30px;
+ max-width:70%;
+ padding:30px 20px 50px 20px;
  margin:20px 0;
  background:#fbfbfb;
  border-radius:3px;
@@ -692,7 +692,6 @@ footer {
  footer {
   text-align:center;
   margin:20px auto;
-  position:relative;
   left:auto;
   bottom:auto;
   width:auto
@@ -712,7 +711,8 @@ footer {
  }
 }
 .tag-h2 {
- margin-left:10px
+ margin-left:10px;
+ text-decoration: underline;
 }
 .tag-h3 {
  margin-left:20px
@@ -726,22 +726,18 @@ footer {
 .tag-h6 {
  margin-left:50px
 }
-h1{
-
+h2,h2+p,section>h2+ul {
+ margin-left:20px    !important
 }
-h2, h2+p,ul {
-    margin-left:20px    !important;
+h3,h3+p,section>h3+ul {
+ margin-left:40px    !important
 }
-h3, h3+p, ul {
-    margin-left:40px    !important;
+h4,h4+p,section>h4+ul {
+ margin-left:60px    !important
 }
-h4, h4+p {
-    margin-left:60px    !important;
+h5,h5+p,section>h5+ul {
+ margin-left:80px    !important
 }
-h5, h5+p {
-    margin-left:80px    !important;
+h6,h6+p,section>h6+ul {
+ margin-left:100px   !important
 }
-h6, h6+p {
-    margin-left:100px   !important;
-}
-
